# OmniNumpy

./: LICENSE  README.md  benchmarks.py  demo.py  examples.py  legacy_example.py  pyproject.toml  readme.md  setup.py  wefew
.github/workflows/: test.yml
omninumpy/: __init__.py  array_core.py  backend.py  compat_core.py  core.py  dtype_core.py  interface.py  linalg_core.py  math_core.py  random_core.py  reduce_core.py  shape_core.py  version.py
omninumpy/core/: __init__.py  array_core.py  compat_core.py  dtype_core.py  linalg_core.py  math_core.py  random_core.py  reduce_core.py  shape_core.py
omninumpy/tests/: test_backends.py  test_basic.py
tests/: __init__.py  test_basic.py  test_numpy2_compatibility.py
